loading wandb data for eval

--- a/fine_tuning/Finetune few layers of LLM with WandB.ipynb
+++ b/fine_tuning/Finetune few layers of LLM with WandB.ipynb
@@ -24,8 +24,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download processed dataset from WandB"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import wandb\n",
+    "from wandb import Api\n",
+    "from datasets import load_from_disk # for some reason load_dataset gives an error\n",
+    "\n",
+    "# load the packed dataset\n",
+    "# api = Api()\n",
+    "# artifact = api.artifact('vijaygkd/alpaca_ft/alpaca_with_prompt_gpt4_splitted:v0', type='dataset')\n",
+    "# artifact_dir = artifact.download()\n",
+    "# ds_packed = load_from_disk(artifact_dir)\n",
+    "\n",
+    "def load_jsonl(file_path):\n",
+    "    data = []\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            data.append(json.loads(line))\n",
+    "    return data\n",
+    "    \n",
+    "train_dataset = load_jsonl(f\"alpaca_with_prompt_gpt4_train.jsonl\")\n",
+    "eval_dataset = load_jsonl(f\"alpaca_with_prompt_gpt4_eval.jsonl\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download packed dataset from WandB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +76,7 @@
      "text": [
       "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact packed_alpaca_hf:v0, 178.69MB. 7 files... \n",
       "\u001b[34m\u001b[1mwandb\u001b[0m:   7 of 7 files downloaded.  \n",
-      "Done. 0:0:2.1\n"
+      "Done. 0:0:9.1\n"
      ]
     }
    ],
@@ -64,23 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-26 22:59:28.267912: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-03-26 22:59:28.380662: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/\n",
-      "2024-03-26 22:59:28.380682: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2024-03-26 22:59:28.946133: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/\n",
-      "2024-03-26 22:59:28.946210: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/\n",
-      "2024-03-26 22:59:28.946216: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from transformers import default_data_collator\n",
@@ -106,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +149,7 @@
        "            13,    13,  2277, 29937,  2799]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +170,7 @@
        "torch.Size([32, 1024])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +220,7 @@
        "          total_train_steps=1053)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,24 +263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2552e8927ed4476d8ae985e2659d06cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import AutoModelForCausalLM\n",
@@ -396,6 +409,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate text from model for evaluation and save to W&B\n",
+    "\n",
+    "Note: This is super helpful for debugging and to check how the model is aligning with the dataset as the training progresses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -419,48 +441,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Generate text from model for evaluation and save to W&B\n",
-    "\n",
-    "Note: This is super helpful for debugging and to check how the model is aligning with the dataset as the training progresses."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from tqdm.auto import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
-    "# from wandb import Api\n",
-    "\n",
-    "# api = Api()\n",
-    "# artifact = api.artifact('capecape/alpaca_ft/alpaca_gpt4_splitted:v4', type='dataset')\n",
-    "# dataset_dir = artifact.download()\n",
-    "\n",
-    "# def load_jsonl(file_path):\n",
-    "#     data = []\n",
-    "#     with open(file_path, 'r') as file:\n",
-    "#         for line in file:\n",
-    "#             data.append(json.loads(line))\n",
-    "#     return data\n",
-    "    \n",
-    "# train_dataset = load_jsonl(f\"{dataset_dir}/alpaca_gpt4_train.jsonl\")\n",
-    "# eval_dataset = load_jsonl(f\"{dataset_dir}/alpaca_gpt4_eval.jsonl\")\n",
-    "\n",
-    "\n",
-    "# def prompt_table(examples, log=False, table_name=\"predictions\"):\n",
-    "#     table = wandb.Table(columns=[\"prompt\", \"generation\", \"concat\", \"output\", \"max_new_tokens\", \"temperature\", \"top_p\"])\n",
-    "#     for example in tqdm(examples, leave=False):\n",
-    "#         prompt, gpt4_output = example[\"prompt\"], example[\"output\"]\n",
-    "#         out = generate(prompt, test_config.max_new_tokens, test_config.gen_config)\n",
-    "#         table.add_data(prompt, out, prompt+out, gpt4_output, test_config.max_new_tokens, test_config.gen_config.temperature, test_config.gen_config.top_p)\n",
-    "#     if log:\n",
-    "#         wandb.log({table_name:table})\n",
-    "#     return table\n"
+    "def prompt_table(examples, log=False, table_name=\"predictions\"):\n",
+    "    table = wandb.Table(columns=[\"prompt\", \"generation\", \"concat\", \"output\", \"max_new_tokens\", \"temperature\", \"top_p\"])\n",
+    "    for example in tqdm(examples, leave=False):\n",
+    "        prompt, gpt4_output = example[\"prompt\"], example[\"output\"]\n",
+    "        out = generate(prompt, test_config.max_new_tokens, test_config.gen_config)\n",
+    "        table.add_data(prompt, out, prompt+out, gpt4_output, test_config.max_new_tokens, test_config.gen_config.temperature, test_config.gen_config.top_p)\n",
+    "    if log:\n",
+    "        wandb.log({table_name:table})\n",
+    "    return table\n"
    ]
   },
   {
@@ -494,7 +490,7 @@
     "               \"eval_accuracy\": eval_acc.compute()})\n",
     "    \n",
     "    # generate eval predictions\n",
-    "    # prompt_table(eval_dataset[:config.n_eval_samples], log=True)\n",
+    "    prompt_table(eval_dataset[:config.n_eval_samples], log=True)\n",
     "    \n",
     "    model.train()\n"
    ]
@@ -711,9 +707,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python38-azureml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -725,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
