--- a/fine_tuning/Finetune few layers of LLM with WandB.ipynb
+++ b/fine_tuning/Finetune few layers of LLM with WandB.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,10 +42,9 @@
     "from datasets import load_from_disk # for some reason load_dataset gives an error\n",
     "\n",
     "# load the packed dataset\n",
-    "# api = Api()\n",
-    "# artifact = api.artifact('vijaygkd/alpaca_ft/alpaca_with_prompt_gpt4_splitted:v0', type='dataset')\n",
-    "# artifact_dir = artifact.download()\n",
-    "# ds_packed = load_from_disk(artifact_dir)\n",
+    "api = Api()\n",
+    "artifact = api.artifact('vijaygkd/alpaca_ft/alpaca_with_prompt_gpt4_splitted:v0', type='dataset')\n",
+    "artifact_dir = artifact.download()\n",
     "\n",
     "def load_jsonl(file_path):\n",
     "    data = []\n",
@@ -54,8 +53,8 @@
     "            data.append(json.loads(line))\n",
     "    return data\n",
     "    \n",
-    "train_dataset = load_jsonl(f\"alpaca_with_prompt_gpt4_train.jsonl\")\n",
-    "eval_dataset = load_jsonl(f\"alpaca_with_prompt_gpt4_eval.jsonl\")\n"
+    "train_dataset = load_jsonl(f\"{artifact_dir}/alpaca_with_prompt_gpt4_train.jsonl\")\n",
+    "eval_dataset = load_jsonl(f\"{artifact_dir}/alpaca_with_prompt_gpt4_eval.jsonl\")\n"
    ]
   },
   {
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +75,7 @@
      "text": [
       "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact packed_alpaca_hf:v0, 178.69MB. 7 files... \n",
       "\u001b[34m\u001b[1mwandb\u001b[0m:   7 of 7 files downloaded.  \n",
-      "Done. 0:0:9.1\n"
+      "Done. 0:0:2.2\n"
      ]
     }
    ],
@@ -106,9 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-27 22:23:09.456626: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-03-27 22:23:12.528441: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/\n",
+      "2024-03-27 22:23:12.528457: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2024-03-27 22:23:18.089885: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/\n",
+      "2024-03-27 22:23:18.090015: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/:/anaconda/envs/azureml_py38/lib/\n",
+      "2024-03-27 22:23:18.090026: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from transformers import default_data_collator\n",
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +162,7 @@
        "            13,    13,  2277, 29937,  2799]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +183,7 @@
        "torch.Size([32, 1024])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -210,17 +223,17 @@
        "          lr=0.0002,\n",
        "          n_eval_samples=10,\n",
        "          max_seq_len=1024,\n",
-       "          epochs=3,\n",
+       "          epochs=2,\n",
        "          gradient_accumulation_steps=1,\n",
        "          batch_size=32,\n",
        "          log_model=False,\n",
        "          mom=0.9,\n",
        "          gradient_checkpointing=True,\n",
        "          freeze_embed=True,\n",
-       "          total_train_steps=1053)"
+       "          total_train_steps=702)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +253,7 @@
     "    lr=2e-4,\n",
     "    n_eval_samples=10, # How many samples to generate on validation\n",
     "    max_seq_len=max_seq_len, # Length of the sequences to pack\n",
-    "    epochs=3,  # we do 3 pasess over the dataset.\n",
+    "    epochs=2,  # we do 3 pasess over the dataset.\n",
     "    gradient_accumulation_steps=gradient_accumulation_steps,  # evey how many iterations we update the gradients, simulates larger batch sizes\n",
     "    batch_size=batch_size,  # what my GPU can handle, depends on how many layers are we training  \n",
     "    log_model=False,  # upload the model to W&B?\n",
@@ -263,9 +276,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f60cd75d121a405eb5f0dab2c0b26082",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import AutoModelForCausalLM\n",
@@ -282,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,26 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_gpu(tensor_dict):\n",
     "    return {k: v.to('cuda') for k, v in tensor_dict.items()}\n",
     "\n",
-    "class Accuracy:\n",
-    "    \"A simple Accuracy function compatible with HF models\"\n",
-    "    def __init__(self):\n",
-    "        self.count = 0\n",
-    "        self.tp = 0.\n",
-    "    def update(self, logits, labels):\n",
-    "        logits, labels = logits.argmax(dim=-1).view(-1).cpu(), labels.view(-1).cpu()\n",
-    "        tp = (logits == labels).sum()\n",
-    "        self.count += len(logits)\n",
-    "        self.tp += tp\n",
-    "        return tp / len(logits)\n",
-    "    def compute(self):\n",
-    "        return self.tp / self.count\n",
     "    \n",
     "from pathlib import Path\n",
     "def save_model(model, model_name, models_folder=\"models\", log=False):\n",
@@ -381,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +434,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Accuracy:\n",
+    "    \"A simple token level Accuracy function compatible with HF models\"\n",
+    "    def __init__(self):\n",
+    "        self.count = 0\n",
+    "        self.tp = 0.\n",
+    "    def update(self, logits, labels):\n",
+    "        logits, labels = logits.argmax(dim=-1).view(-1).cpu(), labels.view(-1).cpu()\n",
+    "        tp = (logits == labels).sum()\n",
+    "        self.count += len(logits)\n",
+    "        self.tp += tp\n",
+    "        return tp / len(logits)\n",
+    "    def compute(self):\n",
+    "        return self.tp / self.count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,104 +540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mvijaygkd\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.5"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/mnt/batch/tasks/shared/LS_root/mounts/clusters/vm-a100-80gb/code/LLM-recipes/fine_tuning/wandb/run-20240326_230015-5mipibmg</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/vijaygkd/alpaca_ft/runs/5mipibmg/workspace' target=\"_blank\">worthy-serenity-18</a></strong> to <a href='https://wandb.ai/vijaygkd/alpaca_ft' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/vijaygkd/alpaca_ft' target=\"_blank\">https://wandb.ai/vijaygkd/alpaca_ft</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/vijaygkd/alpaca_ft/runs/5mipibmg/workspace' target=\"_blank\">https://wandb.ai/vijaygkd/alpaca_ft/runs/5mipibmg/workspace</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60ee9ef4e4a64010ac0d36ae6c3b00d5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cafec1d20764f60b0b921b9934630fd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1053 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -707,9 +657,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3.8 - AzureML",
    "language": "python",
-   "name": "python3"
+   "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
