param count function

--- a/fine_tuning/SFTTrainer and WandB.ipynb
+++ b/fine_tuning/SFTTrainer and WandB.ipynb
@@ -163,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39a8867bcce0412db0bd45789bedf8b7",
+       "model_id": "003837ea2271456a8943a39c782ed441",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total params: 6738.42M, Trainable: 1750.14M\n"
+      "Total params: 6738.42M, Trainable: 1750.14M, Trainable%: 25.97%\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
     "def param_count(m):\n",
     "    params = sum([p.numel() for p in m.parameters()])/1_000_000\n",
     "    trainable_params = sum([p.numel() for p in m.parameters() if p.requires_grad])/1_000_000\n",
-    "    print(f\"Total params: {params:.2f}M, Trainable: {trainable_params:.2f}M\")\n",
+    "    print(f\"Total params: {params:.2f}M, Trainable: {trainable_params:.2f}M, Trainable%: {(100 * trainable_params / params):.2f}%\")\n",
     "    return params, trainable_params\n",
     "\n",
     "params, trainable_params = param_count(model)"
